--- a/style/frame1.css
+++ b/style/frame1.css
@@ -3,9 +3,10 @@
 }
 
 .MainSection {
-  background-image: url("../img/frame1-bg.jpg");
-  background-size: cover;
+  background-position: center center;
+  background-attachment: fixed;
   background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .MainText {
@@ -71,4 +72,16 @@
 
 .MainFooter {
   margin-bottom: 2%;
+}
+
+@media (max-width: 480px) {
+  .MainSection {
+    background-image: url("../img/frame1-bg2.jpeg");
+  }
+}
+
+@media (min-width: 500px) and (max-width: 1800px) {
+  .MainSection {
+    background-image: url("../img/frame1-bg.jpg");
+  }
 }
