--- a/templates/accountType.html
+++ b/templates/accountType.html
@@ -27,6 +27,9 @@
             <figcaption class="Caption"><center>Patient</center></figcaption>
           </figure>
         </label>
+        <center>
+          <input type="submit" class="FormSubmit" />
+        </center>
       </form>
     </section>
   </body>
