--- a/style/frame1.css
+++ b/style/frame1.css
@@ -12,7 +12,7 @@
 
 .MainText {
   padding-top: 20%;
-  font-family: "Sakkal Majalla";
+  font-family: Helvetica;
   font-style: normal;
   font-weight: 400;
   font-size: 32px;
