--- a/templates/accountType.html
+++ b/templates/accountType.html
@@ -10,7 +10,7 @@
     />
   </head>
   <body>
-    <section class="AccountSelect">
+    <section class="AccountSelect col-xs-12 col-md-12">
       <p class="AccountHeader">Choose an account type.</p>
       <form action="register.html">
         <input type="checkbox" id="cb-doctor" />
