--- a/templates/about.html
+++ b/templates/about.html
@@ -7,15 +7,17 @@
       document.getElementsByTagName("html")[0].className += " js";
     </script>
     <link rel="stylesheet" href="../style/about.css" />
+    <link rel="stylesheet" href="../style/nav.css" />
     <title>About Us and FAQs</title>
   </head>
   <body>
-    <header class="cd-header flex flex-column flex-center">
-      <div class="text-component text-center">
-        <h1>About Us and FAQs</h1>
-      </div>
-    </header>
-
+    <nav>
+      <ul class="menu">
+        <li><a href="/index.html">Home</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="register.html">Login</a></li>
+      </ul>
+    </nav>
     <section
       class="cd-faq js-cd-faq container max-width-md margin-top-lg margin-bottom-lg"
     >
