--- a/templates/accountType.html
+++ b/templates/accountType.html
@@ -8,8 +8,16 @@
       href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="../style/nav.css" />
   </head>
   <body>
+    <nav>
+      <ul class="menu">
+        <li><a href="/index.html">Home</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="register.html">Login</a></li>
+      </ul>
+    </nav>
     <section class="AccountSelect col-xs-12 col-md-12">
       <p class="AccountHeader">Choose an account type.</p>
       <form action="register.html">
