Made some UI changes

--- a/style/frame1.css
+++ b/style/frame1.css
@@ -7,7 +7,7 @@
 }
 
 .MainSection {
-  background-image: url("../docs/assets/img/frame1-bg.jpg");
+  background-image: url("../img/frame1-bg.jpg");
   background-position: center center;
   background-attachment: fixed;
   background-repeat: no-repeat;
