--- a/style/frame1.css
+++ b/style/frame1.css
@@ -98,3 +98,7 @@ button::after {
   box-shadow: 0 0 5px #ffffff, 0 0 25px #ffffff, 0 0 50px #ffffff,
     0 0 200px #ffffff;
 }
+
+.MindField-logo {
+  margin-top: 6%;
+}
