--- a/templates/about.html
+++ b/templates/about.html
@@ -13,7 +13,7 @@
   <body>
     <nav>
       <ul class="menu">
-        <li><a href="/index.html">Home</a></li>
+        <li><a href="../index.html">Home</a></li>
         <li><a href="about.html">About Us</a></li>
         <li><a href="register.html">Login</a></li>
       </ul>
@@ -35,18 +35,15 @@
             <div class="cd-faq__content">
               <div class="text-component">
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae
-                  quidem blanditiis delectus corporis, possimus officia sint
-                  sequi ex tenetur id impedit est pariatur iure animi non a
-                  ratione reiciendis nihil sed consequatur atque repellendus
-                  fugit perspiciatis rerum et. Dolorum consequuntur fugit
-                  deleniti, soluta fuga nobis. Ducimus blanditiis velit sit iste
-                  delectus obcaecati debitis omnis, assumenda accusamus cumque
-                  perferendis eos aut quidem! Aut, totam rerum, cupiditate quae
-                  aperiam voluptas rem inventore quas, ex maxime culpa nam
-                  soluta labore at amet nihil laborum? Explicabo numquam, sit
-                  fugit, voluptatem autem atque quis quam voluptate fugiat earum
-                  rem hic, reprehenderit quaerat tempore at. Aperiam.
+                  MindField is essentially an idea conceptualized by three unapologetically passionate engineering
+                  students sitting in their dormitories with a hope of potentially creating an impact on society.
+                  However, taking an idea from ideation to a minimum viable product requires necessary interaction with
+                  the potential customer to understand there needs which will pivot us in right direction. This process
+                  of design thinking is both new and unexplored to us.) MindField is essentially an idea conceptualized
+                   by three unapologetically passionate engineering students sitting in their dormitories with a hope of
+                    potentially creating an impact on society. However, taking an idea from ideation to a minimum viable
+                     product requires necessary interaction with the potential customer to understand there needs which
+                      will pivot us in right direction. This process of design thinking is both new and unexplored to us.
                 </p>
               </div>
             </div>
@@ -58,33 +55,21 @@
             <div class="cd-faq__content">
               <div class="text-component">
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Quasi cupiditate et laudantium esse adipisci consequatur modi
-                  possimus accusantium vero atque excepturi nobis in doloremque
-                  repudiandae soluta non minus dolore voluptatem enim reiciendis
-                  officia voluptates, fuga ullam? Voluptas reiciendis cumque
-                  molestiae unde numquam similique quas doloremque non,
-                  perferendis doloribus necessitatibus itaque dolorem quam
-                  officia atque perspiciatis dolore laudantium dolor voluptatem
-                  eligendi? Aliquam nulla unde voluptatum molestiae, eos fugit
-                  ullam, consequuntur, saepe voluptas quaerat deleniti.
-                  Repellendus magni sint temporibus, accusantium rem commodi?
-                </p>
-              </div>
-            </div>
-          </li>
-          <li class="cd-faq__item">
-            <a class="cd-faq__trigger" href="#0"
-              ><span>Why are we doing this?</span></a
-            >
-            <div class="cd-faq__content">
-              <div class="text-component">
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Blanditiis provident officiis, reprehenderit numquam.
-                  Praesentium veritatis eos tenetur magni debitis inventore
-                  fugit, magnam, reiciendis, saepe obcaecati ex vero quaerat
-                  distinctio velit.
+                  The idea behind MindField revolves around three central themes:
+                  <ol>
+                    <li>To provide an environment  where our MindHeroes can discover and interact with each other, a
+                       platform where their differences are celebrated rather than criticized or sympathized, a
+                        community which works to break the stigma associated with Mental health disorders.
+                    </li>
+                    <li>To develop a platform where an overall diagnosis of various mental disorder and neurodevelopment
+                       disorder can be provided at an affordable price to the user, designed in collaboration with
+                       industry specialist. At the same time connect them with specialized counsellors.
+                    </li>
+                    <li>To provide a holistic curriculum designed for various mental disorder, learning disability and
+                       neurodevelopment disorder. With lectures, exercises, interactive games and many more.</li>
+                  </ol>
+                  <strong>Click<a target="_blank" href="https://docs.google.com/presentation/d/1fVujgGlnR2JpAAKRHm4T1E-cpisoM7m5/edit?usp=sharing&ouid=108468068996701287866&rtpof=true&sd=true">
+                    here</a> to check our Power Point Presentation</strong>
                 </p>
               </div>
             </div>
