--- a/templates/accountType.html
+++ b/templates/accountType.html
@@ -13,13 +13,13 @@
   <body>
     <nav>
       <ul class="menu">
-        <li><a href="/index.html">Home</a></li>
+        <li><a href="../index.html">Home</a></li>
         <li><a href="about.html">About Us</a></li>
         <li><a href="register.html">Login</a></li>
       </ul>
     </nav>
     <section class="AccountSelect col-xs-12 col-md-12">
-      <p class="AccountHeader">Choose an account type.</p>
+      <center><p class="AccountHeader">Choose an account type.</p></center>
       <form action="register.html">
         <input type="checkbox" id="cb-doctor" />
         <label for="cb-doctor">
@@ -33,6 +33,13 @@
           <figure>
             <img src="../img/patient.png" />
             <figcaption class="Caption"><center>Patient</center></figcaption>
+          </figure>
+        </label>
+        <input type="checkbox" id="cb-researcher" />
+        <label for="cb-researcher">
+          <figure>
+            <img src="../img/researcher.png" />
+            <figcaption class="Caption"><center>Researcher</center></figcaption>
           </figure>
         </label>
         <center>
