--- a/style/nav.css
+++ b/style/nav.css
@@ -12,13 +12,14 @@
   justify-content: center;
   color: white;
   align-items: center;
-  max-width: 100%;
+  max-width: 60%;
   margin: 0 auto;
   list-style: none;
   margin-top: 2%;
   margin-bottom: 2%;
   padding-top: 1%;
   background-color: rgba(0, 0, 0, 0.6);
+  border-radius: 10px;
 }
 
 .menu li {
