--- a/templates/register.html
+++ b/templates/register.html
@@ -28,7 +28,7 @@
   <body>
     <nav>
       <ul class="menu">
-        <li><a href="/index.html">Home</a></li>
+        <li><a href="../index.html">Home</a></li>
         <li><a href="about.html">About Us</a></li>
         <li><a href="register.html">Login</a></li>
       </ul>
