Edited About Us page

--- a/templates/about.html
+++ b/templates/about.html
@@ -39,11 +39,7 @@
                   students sitting in their dormitories with a hope of potentially creating an impact on society.
                   However, taking an idea from ideation to a minimum viable product requires necessary interaction with
                   the potential customer to understand there needs which will pivot us in right direction. This process
-                  of design thinking is both new and unexplored to us.) MindField is essentially an idea conceptualized
-                   by three unapologetically passionate engineering students sitting in their dormitories with a hope of
-                    potentially creating an impact on society. However, taking an idea from ideation to a minimum viable
-                     product requires necessary interaction with the potential customer to understand there needs which
-                      will pivot us in right direction. This process of design thinking is both new and unexplored to us.
+                  of design thinking is both new and unexplored to us.
                 </p>
               </div>
             </div>
