--- a/templates/about.html
+++ b/templates/about.html
@@ -64,7 +64,7 @@
                     <li>To provide a holistic curriculum designed for various mental disorder, learning disability and
                        neurodevelopment disorder. With lectures, exercises, interactive games and many more.</li>
                   </ol>
-                  <strong>Click<a target="_blank" href="https://docs.google.com/presentation/d/1fVujgGlnR2JpAAKRHm4T1E-cpisoM7m5/edit?usp=sharing&ouid=108468068996701287866&rtpof=true&sd=true">
+                  <strong>Click<a target="_blank" href="https://docs.google.com/presentation/d/1ZBpeZgzyfqHkSFHeRLFA-HgI9ofIUBVX/edit?rtpof=true&sd=true">
                     here</a> to check our Power Point Presentation.</strong><br>
                   <strong>Click <a target="_blank" href="https://www.youtube.com/watch?v=KUqMQ-HjKtA">here</a> to view our APP UI Video.</strong><br>
                   <strong>Click <a target="_blank" href="https://www.youtube.com/watch?v=SvGk6ofpZio">here</a> for an awareness video for mental health disorders.</strong>
